fix spacing on heading

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,6 +1,13 @@
 .wrap-home {
   max-width: 64rem;
-  padding-top: 2rem;
+}
+
+.wrap-home h1 {
+  margin-bottom: 25px;
+}
+
+.wrap-home p {
+  margin-bottom: 25px;
 }
 
 .search-grid {
@@ -25,6 +32,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0 13px;
+  justify-content: space-between;
 }
 
 .planning-application-link {
